Hanin_Complete_Project

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,4 +7,4 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5Dialect
 server.port=8085
-#server.servlet.context-path=/gestionFoyerProject
+server.servlet.context-path=/gestionFoyerProject
